# Untangling-multi-concern-commits-using-SLM

./: .gitignore  .gitmodules  LICENSE  README.md  app.py  ccs_token_distribution_analysis.md  pyproject.toml  requirements.txt  tangled_css_token_distribution_analysis.md
RQ/: main.py  visualize.py
datasets/: .gitignore  README.md  analyze_ccs_tokens.py.py  clean_ccs_dataset.py  dataset_info.yaml  extract_samples_by_type.py  generate_tangled.py  index.py  process_ccs_samples.py  reason.py  recover_sampled_diff.py  sample_atomic_commites.py  sample_css_dataset.py  show_sampled_diffs.py  show_tokens_distribution.py  tangled_css_token_distribution_analysis.md
fine_tuning/: accelerate_config.yaml  clean_env.sh  environment.yml  example.env  fine-tuning-reference.ipynb  prepare.sh  requirements.txt  run_training.sh  setup_env.sh  train.py  troubleshoot_sbatch.md
models/: environment.yml  index.py  prepare.sh  sft.py  train.py
rq0/: README.md  config.yaml  lmstudio_handler.py  main.py  openai_handler.py
rq1/: config.yaml  main.py
rq2/: README.md  config.yaml  main.py
rq3/: README.md  config.yaml  main.py
rq4/: README.md  config.yaml
scripts/: evaluate_concerns.py  flexeme.sh  generate_concern_combinations.sh  generate_variant_a.py  run_concern_evaluation.sh  variant_a_pipeline.py  verify_tangled_concerns.py  verify_tangled_concerns_with_count.py
src/: app.py
streamlit/: app.py
temp/: csv_dataset_migration_plan.md  hpc_time_priority_guide.md
utils/: __init__.py  data.py  eval.py  model.py  openai.py  prompt.py
visual_eval/: __init__.py  constant.py
(+320 files in other folders)
